--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -30,7 +30,6 @@
         if (password != confirmPassword) {
             jQuery("#errorGroup").addClass("has-error");
             jQuery("#Error").html("Passwords do not match!");
-            jQuery("#submit-button").prop("disabled", true);
         } else {
             jQuery("#errorGroup").removeClass("has-error");
             jQuery("#Error").html("");
@@ -153,7 +152,7 @@
 
                     <input type="hidden" name="action" value="update_self_password">
 
-                    <button id="submit-button" type="submit" class="btn mas-button">Update Password</button>                    
+                    <button id="submit-button" type="submit" class="btn mas-button" disabled="true">Update Password</button>                    
                 </form>
             </div>
         </div>
