--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -27,11 +27,11 @@
         var password = jQuery("#newpw").val();
         var confirmPassword = jQuery("#confirmpw").val();
 
-        if (password != confirmPassword) {
+        if (password.length >= 8) {
+            jQuery("#Error").html("Passwords must be 8 characters");
+        } else if (password != confirmPassword) {
             jQuery("#errorGroup").addClass("has-error");
             jQuery("#Error").html("Passwords do not match!");
-        } else if (password.length == 8) {
-            jQuery("#Error").html("Passwords must be 8 characters");
         } else {
             jQuery("#errorGroup").removeClass("has-error");
             jQuery("#Error").html("");
