--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -28,6 +28,7 @@
         var confirmPassword = jQuery("#confirmpw").val();
 
         if (password.length < 8) {
+            jQuery("#errorGroup").addClass("has-error");
             jQuery("#Error").html("Passwords must be 8 characters");
         } else if (password != confirmPassword) {
             jQuery("#errorGroup").addClass("has-error");
