--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -9,7 +9,7 @@
 
     //redirect if not logged in
     if ($wp_user->ID == 0) {
-        wp_redirect('login');
+        wp_redirect(home_url());
         exit('Redirected logged out user');
     }
 
