--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -5,7 +5,9 @@
     require_once dirname(__DIR__).'/../resources/GSuiteAPI.php';
     require_once dirname(__DIR__).'/../resources/StripeAPI.php';
 
-    $email = wp_get_current_user()->user_email;
+    $wp_user = wp_get_current_user();
+
+    $email = $wp_user->user_email;
 
     $user = getUser($email);
     $firstName = $user->getName()->getGivenName();
