--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -113,17 +113,19 @@
 
                     <div class="form-group" ng-class="{ 'has-error' : register.password.$dirty && register.password.$invalid && register.passwordMatch.$dirty && register.passwordMatch.$invalid}">
                         <label for="password" class="control-label" >Password:</label>
-                        <input type="password" style="display: inline;" class="form-control" id="password" name="password" required ng-model="password" password-verify="{{passwordMatch}}">
+                        <input type="password" style="display: inline;" class="form-control" id="password" name="password" required ng-model="password" password-verify="{{passwordMatch}}" ng-minlength="8">
                         <div class="help-block" ng-messages="register.password.$error" ng-if="register.password.$dirty">
-                            <p ng-message="required">This field is required.</p>
+                            <p ng-message="minlength">Must be 8 characters.</p>
+                            <p ng-message="required">This field is required.</p>                            
                         </div>
                     </div>
 
                     <div class="form-group" ng-class="{ 'has-error' : register.passwordMatch.$dirty && register.passwordMatch.$invalid }">
                         <label for="passwordMatch" class="control-label" >Confirm Password:</label>
-                        <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required password-verify="{{password}}">
-                        <div class="help-block" ng-messages="register.password.$error" ng-if="register.password.$dirty">
+                        <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required password-verify="{{password}}" ng-minlength="8">
+                        <div class="help-block" ng-messages="register.passwordMatch.$error" ng-if="register.passwordMatch.$dirty">
                             <p ng-message="required">This field is required.</p>
+                            <p ng-message="minlength">Must be 8 characters.</p>
                             <p ng-message="passwordVerify">The fields do not match.</p>
                         </div>
                     </div>
@@ -145,7 +147,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="register.$invalid">Submit</button>
                     </div>
                 </div>
             </form>
