--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -146,7 +146,7 @@
                     <div id="errorGroup">
                         <div class="form-group">
                             <label for="newpw">New Password</label>
-                            <input type="password" name="newPassword" id="newpw" class="form-control">
+                            <input type="password" name="newPassword" id="newpw" class="form-control" onchange="checkPasswordMatch();">
                         </div>
 
                         <div class="form-group">
