cleanup unused admin pages. URL naming change

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -45,7 +45,7 @@ function isSelected($option, $target) {
     <div class="container-fluid">
         <div class="row">
             <div class="mas-title">
-                <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >>
+                <a href="admin.php?page=mas-plugin" class="mas">Members</a> >>
                 <?php echo $user->getName()->getFullName();?>
             </div>
         </div>
