--- a/front-end-pages/admin-pages/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/member-edit/admin-members-edit.html
@@ -5,7 +5,7 @@ defined( 'ABSPATH' ) or die();
 
 echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-edit.css', __FILE__ ) . '">' . "\n";
 
-include_once dirname(__DIR__).'../../../../resources/GSuiteAPI.php';
+include_once dirname(__DIR__).'../../../resources/GSuiteAPI.php';
 
 $user = getUser($_GET['email']);
 
