--- a/front-end-pages/member-page/failure.html
+++ b/front-end-pages/member-page/failure.html
@@ -3,12 +3,14 @@
 </style>
 
 <br>
-<div class="panel panel-danger">
-    <div class="panel-heading">
-        Whoops!
-    </div>
+<div class="container-fluid">
+    <div class="panel panel-danger">
+        <div class="panel-heading">
+            Whoops!
+        </div>
 
-    <div class="panel-body">
-        <p>You must be logged into DecaturMakers to visit this page. Please return to the homepage and log in.</p>
+        <div class="panel-body">
+            <p>You must be logged into DecaturMakers to visit this page. Please return to the homepage and log in.</p>
+        </div>
     </div>
 </div>
