add expiration to table

--- a/front-end-pages/admin-pages/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/member-table/admin-members-table.html
@@ -22,6 +22,7 @@
                         <th>RFID Tag #</th>
                         <th>Membership Plan</th>
                         <th>Subscription Status</th>
+                        <th>Expiration</th>
                         <th>Member Since</th>
                         <th>Founding Member</th>
                     </tr>
