--- a/front-end-pages/admin-pages/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/member-edit/admin-members-edit.html
@@ -5,7 +5,7 @@ defined( 'ABSPATH' ) or die();
 
 echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-edit.css', __FILE__ ) . '">' . "\n";
 
-include_once dirname(__DIR__).'../../../../resources/GSuiteAPI.php';
+include_once dirname(__DIR__).'../../../resources/GSuiteAPI.php';
 
 $user = getUser($_GET['email']);
 
@@ -45,7 +45,7 @@ function isSelected($option, $target) {
     <div class="container-fluid">
         <div class="row">
             <div class="mas-title">
-                <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >>
+                <a href="admin.php?page=mas-plugin" class="mas">Members</a> >>
                 <?php echo $user->getName()->getFullName();?>
             </div>
         </div>
