--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary" ng-disabled="register.$invalid">Submit</button>
+                        <button id="submit-button" type="submit" class="btn btn-primary" ng-disabled="register.$invalid">Submit</button>
                     </div>
                 </div>
             </form>
