--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -82,14 +82,14 @@
                         function showError() {
                             jQuery("#username-group").addClass("has-error");
                             jQuery("#username-help-block").removeClass("hidden");
-                            jQuery("#submit-button").prop("disabled", true);
+                            jQuery("#username").addClass("has-error");
                             //TODO Add submission blocker
                         }
 
                         function clearError() {
                             jQuery("#username-group").removeClass("has-error");
                             jQuery("#username-help-block").addClass("hidden");
-                            jQuery("#submit-button").prop("disabled", false);
+                            jQuery("#username").removeClass("has-error");
                         }
 
                         function checkUsername() {
